# eagle15

./: .gitignore  capacitor.config.ts  game.js  index.html  main.js  package-lock.json  package.json  vite.config.js  vite.config.mjs
c_cpp_migration/cpp_project/: CMakeLists.txt
c_cpp_migration/cpp_project/data/: GALAXY_STATIC.cpp  GALAXY_STATIC.hpp  GalaxyData.cpp  PLANET_MODELS.cpp  PLANET_MODELS.hpp  SettingsManager.cpp  SettingsManager.hpp  createGalaxyStatic.cpp  createGalaxyStatic.hpp  createStarSystem.cpp  createStarSystem.hpp  createState.cpp  createState.hpp  getMarketPrice.cpp  getMarketPrice.hpp  idb.cpp  makeSaveFromState.cpp  makeSaveFromState.hpp  shipRecipes.cpp  shipRecipes.hpp
c_cpp_migration/cpp_project/engine/: Application.cpp  AssetManager.cpp  AssetManager.hpp  HUDManager.cpp  HUDManager.hpp  Input.cpp  Input.hpp  SceneManager.cpp  SceneManager.hpp  StoryManager.cpp  StoryManager.hpp  SurfaceMetrics.cpp  SurfaceMetrics.hpp  UIManager.cpp  UIManager.hpp  createFileSink.cpp  createFileSink.hpp  createGL.cpp  createGL.hpp  dracoDecoder.cpp  dracoModule.cpp  installGLTraceFile.cpp  installGLTraceFile.hpp  surfaceMetrics.test.cpp
c_cpp_migration/cpp_project/gameplay/: Crafting.cpp  Crafting.hpp  CutscenePlayer.cpp  CutscenePlayer.hpp  GameState.cpp  Inventory.cpp  Inventory.hpp  colliders.test.cpp  getShipControls.cpp  getShipControls.hpp  projectiles.test.cpp  raycastToGround.cpp  raycastToGround.hpp  stepShipMovement.cpp  stepShipMovement.hpp
c_cpp_migration/cpp_project/include/: App.hpp  GalaxyData.hpp  GameState.hpp  Hud.hpp  StarSystemScene.hpp
c_cpp_migration/cpp_project/scenes/: CS_ACT1_INTRO.cpp  CS_ACT1_INTRO.hpp  GalaxyMapScene.cpp  GalaxyMapScene.hpp  StarSystemScene.cpp  StarSystemScene.hpp  createStarSystemCtx.cpp  (+1 more)
(+475 files in other folders)
